apps/20-media/frigate/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    pod-security.kubernetes.io/enforce: privileged
