apps/20-media/frigate/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
  labels:
    app: frigate
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: frigate
  template:
    metadata:
      labels:
        app: frigate
        vixens.io/backup-profile: relaxed
      annotations:
        reloader.stakater.com/auto: 'true'
        vixens.io/fast-start: 'true'
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9090'
        prometheus.io/path: /metrics

    spec:
      priorityClassName: vixens-medium
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: frigate
          image: ghcr.io/blakeblackshear/frigate:0.17.0-beta2
          lifecycle:
            preStop:
              exec:
                command: ["sleep", "5"]
          securityContext:
            privileged: true
          ports:
            - containerPort: 5000
              name: http
            - containerPort: 8554
              name: rtsp
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 120
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: http
            failureThreshold: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: 1000m
              memory: 8Gi
            limits:
              cpu: 4000m
              memory: 32Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: storage
              mountPath: /media/frigate
              subPath: Frigate
            - name: shm
              mountPath: /dev/shm
            - name: cache
              mountPath: /tmp/cache
            - name: dri
              mountPath: /dev/dri
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: frigate-config-pvc
        - name: storage
          nfs:
            server: nas.truxonline.com
            path: /mnt/tank/data/media
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 1024Mi
        - name: cache
          persistentVolumeClaim:
            claimName: frigate-cache-pvc
        - name: dri
          hostPath:
            path: /dev/dri
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
