apps/20-media/frigate/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frigate
spec:
  ports:
    - port: 5000
      targetPort: 5000
      name: http
    - port: 1935
      targetPort: 1935
      name: rtmp
    - port: 8554
      targetPort: 8554
      name: rtsp
    - port: 8555
      targetPort: 8555
      name: webrtc
    - port: 9090
      targetPort: 9090
      name: metrics
  selector:
    app: frigate
